added initial css and vars

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <!-- HEADER -->
 
-    <header class="1-header">
+    <header class="header">
         <nav class="nav bd-grid">
             <div>
                 <a href="#" class="nav_logo">My Portfolio</a>
@@ -48,7 +48,7 @@
         </nav>
     </header>
     
-    <main class="1-main">
+    <main class="main">
 
         <!-- HOME -->
         <section class="home bd-grid" id="home">
@@ -141,18 +141,6 @@
                         <div class="skills_bar skills_css"></div>
                         <div>
                             <span class="skills_percentage">80%</span>
-                        </div>                        
-                    </div>
-                    <div class="skills_data">
-                        <div class="skills_names">
-                            <i class="skills_icon">
-                                <img src="./assets/images/svg/js-icon.svg" alt="my JavaScript skill" />
-                            </i>
-                            <span name="skill_name">JavaScript</span>
-                        </div>
-                        <div class="skills_bar skills_javascript"></div>
-                        <div>
-                            <span class="skills_percentage">60%</span>
                         </div>                        
                     </div>
                     <div class="skills_data">
